--- a/po/uk.po
+++ b/po/uk.po
@@ -496,7 +496,7 @@ msgid "Shifted Triad"
 msgstr ""
 
 #: ../gui/colors/hcywheel.py:903
-msgid "Weighted more strongly towards the dominant colour."
+msgid "Weighted more strongly towards the dominant color."
 msgstr ""
 
 #: ../gui/colors/hcywheel.py:907
@@ -507,7 +507,7 @@ msgstr "Додатковий колір"
 #: ../gui/colors/hcywheel.py:908
 msgid ""
 "Contrasting opposites, balanced by having central neutrals between them on "
-"the colour wheel."
+"the color wheel."
 msgstr ""
 
 #: ../gui/colors/hcywheel.py:917
@@ -531,7 +531,7 @@ msgstr "Додатковий суміщений"
 
 #: ../gui/colors/hcywheel.py:927
 msgid ""
-"Two analogous colours and a complement to them, with no secondary colours "
+"Two analogous colors and a complement to them, with no secondary colors "
 "between them."
 msgstr ""
 
@@ -641,7 +641,7 @@ msgstr ""
 
 #: ../gui/colors/hsvwheel.py:95
 #, fuzzy
-msgid "Saturation and Value colour changer."
+msgid "Saturation and Value color changer."
 msgstr "Змінити значення/насиченість"
 
 #: ../gui/colors/palette.py:416 ../gui/colors/palette.py:472
@@ -714,7 +714,7 @@ msgid "Color name:"
 msgstr "Пробник кольорів…"
 
 #: ../gui/colors/paletteview.py:198
-msgid "Current colour's name"
+msgid "Current color's name"
 msgstr ""
 
 #: ../gui/colors/paletteview.py:295
@@ -749,7 +749,7 @@ msgid "Component sliders"
 msgstr ""
 
 #: ../gui/colors/sliders.py:92
-msgid "Adjust individual components of the colour."
+msgid "Adjust individual components of the color."
 msgstr ""
 
 #: ../gui/colors/sliders.py:138
@@ -1622,7 +1622,7 @@ msgstr "Тиск"
 msgid "Color History and other tools"
 msgstr "Журнал кольорів"
 
-#. Colour changing
+#. Color changing
 #: ../gui/toolbar.py:250
 #, fuzzy
 msgid "Change Color"
@@ -3241,7 +3241,7 @@ msgstr ""
 #~ msgstr "Змінити значення/насиченість"
 
 #, fuzzy
-#~ msgid "Toggle the Colour Triangle"
+#~ msgid "Toggle the Color Triangle"
 #~ msgstr "Трикутник кольорів…"
 
 #~ msgid ""
