--- a/po/cs.po
+++ b/po/cs.po
@@ -491,7 +491,7 @@ msgid "Shifted Triad"
 msgstr ""
 
 #: ../gui/colors/hcywheel.py:903
-msgid "Weighted more strongly towards the dominant colour."
+msgid "Weighted more strongly towards the dominant color."
 msgstr ""
 
 #: ../gui/colors/hcywheel.py:907
@@ -502,7 +502,7 @@ msgstr "Kontrastní barvy"
 #: ../gui/colors/hcywheel.py:908
 msgid ""
 "Contrasting opposites, balanced by having central neutrals between them on "
-"the colour wheel."
+"the color wheel."
 msgstr ""
 
 #: ../gui/colors/hcywheel.py:917
@@ -526,7 +526,7 @@ msgstr "Měkce kontrastní barvy"
 
 #: ../gui/colors/hcywheel.py:927
 msgid ""
-"Two analogous colours and a complement to them, with no secondary colours "
+"Two analogous colors and a complement to them, with no secondary colors "
 "between them."
 msgstr ""
 
@@ -636,7 +636,7 @@ msgstr ""
 
 #: ../gui/colors/hsvwheel.py:95
 #, fuzzy
-msgid "Saturation and Value colour changer."
+msgid "Saturation and Value color changer."
 msgstr "Změnit hodnotu/sytost"
 
 #: ../gui/colors/palette.py:416 ../gui/colors/palette.py:472
@@ -711,7 +711,7 @@ msgid "Color name:"
 msgstr "Něvrhář barev..."
 
 #: ../gui/colors/paletteview.py:198
-msgid "Current colour's name"
+msgid "Current color's name"
 msgstr ""
 
 #: ../gui/colors/paletteview.py:295
@@ -747,7 +747,7 @@ msgid "Component sliders"
 msgstr ""
 
 #: ../gui/colors/sliders.py:92
-msgid "Adjust individual components of the colour."
+msgid "Adjust individual components of the color."
 msgstr ""
 
 #: ../gui/colors/sliders.py:138
@@ -1618,7 +1618,7 @@ msgstr "Přítlak"
 msgid "Color History and other tools"
 msgstr "Historie barev"
 
-#. Colour changing
+#. Color changing
 #: ../gui/toolbar.py:250
 #, fuzzy
 msgid "Change Color"
@@ -3247,7 +3247,7 @@ msgstr ""
 #~ msgstr "Změnit hodnotu/sytost"
 
 #, fuzzy
-#~ msgid "Toggle the Colour Triangle"
+#~ msgid "Toggle the Color Triangle"
 #~ msgstr "Barevný trojúhelník..."
 
 #~ msgid ""
