--- a/po/de.po
+++ b/po/de.po
@@ -469,7 +469,7 @@ msgid "Shifted Triad"
 msgstr ""
 
 #: ../gui/colors/hcywheel.py:903
-msgid "Weighted more strongly towards the dominant colour."
+msgid "Weighted more strongly towards the dominant color."
 msgstr ""
 
 #: ../gui/colors/hcywheel.py:907
@@ -479,7 +479,7 @@ msgstr "Komplementär"
 #: ../gui/colors/hcywheel.py:908
 msgid ""
 "Contrasting opposites, balanced by having central neutrals between them on "
-"the colour wheel."
+"the color wheel."
 msgstr ""
 
 #: ../gui/colors/hcywheel.py:917
@@ -502,7 +502,7 @@ msgstr "In Komplementärfarben aufspalten"
 
 #: ../gui/colors/hcywheel.py:927
 msgid ""
-"Two analogous colours and a complement to them, with no secondary colours "
+"Two analogous colors and a complement to them, with no secondary colors "
 "between them."
 msgstr ""
 
@@ -606,7 +606,7 @@ msgid "HSV wheel"
 msgstr ""
 
 #: ../gui/colors/hsvwheel.py:95
-msgid "Saturation and Value colour changer."
+msgid "Saturation and Value color changer."
 msgstr "Sättigung und Wert ändern"
 
 #: ../gui/colors/palette.py:416 ../gui/colors/palette.py:472
@@ -674,7 +674,7 @@ msgid "Color name:"
 msgstr "Farbe:"
 
 #: ../gui/colors/paletteview.py:198
-msgid "Current colour's name"
+msgid "Current color's name"
 msgstr "Aktuelle Farbe"
 
 #: ../gui/colors/paletteview.py:295
@@ -707,7 +707,7 @@ msgid "Component sliders"
 msgstr ""
 
 #: ../gui/colors/sliders.py:92
-msgid "Adjust individual components of the colour."
+msgid "Adjust individual components of the color."
 msgstr ""
 
 #: ../gui/colors/sliders.py:138
@@ -1556,7 +1556,7 @@ msgstr "Linien Druck"
 msgid "Color History and other tools"
 msgstr "Farbhistorie und andere Werkzeuge"
 
-#. Colour changing
+#. Color changing
 #: ../gui/toolbar.py:250
 msgid "Change Color"
 msgstr "Farbe ändern"
@@ -3116,10 +3116,10 @@ msgstr "Rahmen bearbeiten"
 #~ msgid "Change Brush Settings in detail"
 #~ msgstr "Erweiterte Pinseleinstellungen ändern"
 
-#~ msgid "Toggle the Colour Triangle"
+#~ msgid "Toggle the Color Triangle"
 #~ msgstr "Farbdreieck umschalten"
 
-#~ msgid "Toggle the advanced Colour Sampler"
+#~ msgid "Toggle the advanced Color Sampler"
 #~ msgstr "Schalte den erweiterten Farbauswähler um"
 
 #~ msgid "Toggle the scratchpad"
