--- a/po/es.po
+++ b/po/es.po
@@ -512,7 +512,7 @@ msgid "Shifted Triad"
 msgstr "Tríada desplazada"
 
 #: ../gui/colors/hcywheel.py:903
-msgid "Weighted more strongly towards the dominant colour."
+msgid "Weighted more strongly towards the dominant color."
 msgstr "Poniendo más peso hacia el color dominante."
 
 #: ../gui/colors/hcywheel.py:907
@@ -522,7 +522,7 @@ msgstr "Complementarios"
 #: ../gui/colors/hcywheel.py:908
 msgid ""
 "Contrasting opposites, balanced by having central neutrals between them on "
-"the colour wheel."
+"the color wheel."
 msgstr ""
 "Opuestos que se contrastan, balanceados por tener neutros centrales entre "
 "ellos, en la rueda de color."
@@ -549,7 +549,7 @@ msgstr "Complementarios divididos"
 
 #: ../gui/colors/hcywheel.py:927
 msgid ""
-"Two analogous colours and a complement to them, with no secondary colours "
+"Two analogous colors and a complement to them, with no secondary colors "
 "between them."
 msgstr ""
 "Dos colores análogos y el complemento de los mismos, sin colores secundarios "
@@ -661,7 +661,7 @@ msgid "HSV wheel"
 msgstr "Rueda HSV"
 
 #: ../gui/colors/hsvwheel.py:95
-msgid "Saturation and Value colour changer."
+msgid "Saturation and Value color changer."
 msgstr "Seleccionador de color por saturación y valor."
 
 #: ../gui/colors/palette.py:416 ../gui/colors/palette.py:472
@@ -729,7 +729,7 @@ msgid "Color name:"
 msgstr "Nombre del color:"
 
 #: ../gui/colors/paletteview.py:198
-msgid "Current colour's name"
+msgid "Current color's name"
 msgstr "El nombre del color actual"
 
 #: ../gui/colors/paletteview.py:295
@@ -764,7 +764,7 @@ msgid "Component sliders"
 msgstr "Barras de control de componentes"
 
 #: ../gui/colors/sliders.py:92
-msgid "Adjust individual components of the colour."
+msgid "Adjust individual components of the color."
 msgstr "Ajustar los componentes individuales del color."
 
 #: ../gui/colors/sliders.py:138
@@ -1616,7 +1616,7 @@ msgstr "Presión de línea"
 msgid "Color History and other tools"
 msgstr "Historial de color y otras herramientas"
 
-#. Colour changing
+#. Color changing
 #: ../gui/toolbar.py:250
 msgid "Change Color"
 msgstr "Cambiar color"
@@ -3241,10 +3241,10 @@ msgstr "Editar marco"
 #~ msgid "Change Brush Settings in detail"
 #~ msgstr "Cambiar los ajustes de brocha en detalle"
 
-#~ msgid "Toggle the Colour Triangle"
+#~ msgid "Toggle the Color Triangle"
 #~ msgstr "Mostrar/ocultar triángulo de color"
 
-#~ msgid "Toggle the advanced Colour Sampler"
+#~ msgid "Toggle the advanced Color Sampler"
 #~ msgstr "Intercambiar el sampleo de color avanzado"
 
 #~ msgid "Toggle the scratchpad"
