--- a/po/pl.po
+++ b/po/pl.po
@@ -494,7 +494,7 @@ msgid "Shifted Triad"
 msgstr ""
 
 #: ../gui/colors/hcywheel.py:903
-msgid "Weighted more strongly towards the dominant colour."
+msgid "Weighted more strongly towards the dominant color."
 msgstr ""
 
 #: ../gui/colors/hcywheel.py:907
@@ -505,7 +505,7 @@ msgstr "Opozycyjne"
 #: ../gui/colors/hcywheel.py:908
 msgid ""
 "Contrasting opposites, balanced by having central neutrals between them on "
-"the colour wheel."
+"the color wheel."
 msgstr ""
 
 #: ../gui/colors/hcywheel.py:917
@@ -529,7 +529,7 @@ msgstr "Sąsiednie opozycyjnych"
 
 #: ../gui/colors/hcywheel.py:927
 msgid ""
-"Two analogous colours and a complement to them, with no secondary colours "
+"Two analogous colors and a complement to them, with no secondary colors "
 "between them."
 msgstr ""
 
@@ -639,7 +639,7 @@ msgstr ""
 
 #: ../gui/colors/hsvwheel.py:95
 #, fuzzy
-msgid "Saturation and Value colour changer."
+msgid "Saturation and Value color changer."
 msgstr "Zmień jasność i nasycenie"
 
 #: ../gui/colors/palette.py:416 ../gui/colors/palette.py:472
@@ -712,7 +712,7 @@ msgid "Color name:"
 msgstr "Okno kolorów"
 
 #: ../gui/colors/paletteview.py:198
-msgid "Current colour's name"
+msgid "Current color's name"
 msgstr ""
 
 #: ../gui/colors/paletteview.py:295
@@ -747,7 +747,7 @@ msgid "Component sliders"
 msgstr ""
 
 #: ../gui/colors/sliders.py:92
-msgid "Adjust individual components of the colour."
+msgid "Adjust individual components of the color."
 msgstr ""
 
 #: ../gui/colors/sliders.py:138
@@ -1615,7 +1615,7 @@ msgstr "Nacisk"
 msgid "Color History and other tools"
 msgstr "Historia kolorów"
 
-#. Colour changing
+#. Color changing
 #: ../gui/toolbar.py:250
 #, fuzzy
 msgid "Change Color"
@@ -3234,7 +3234,7 @@ msgstr ""
 #~ msgstr "Zmień jasność i nasycenie"
 
 #, fuzzy
-#~ msgid "Toggle the Colour Triangle"
+#~ msgid "Toggle the Color Triangle"
 #~ msgstr "Trójkąt kolorów..."
 
 #~ msgid ""
