--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -506,7 +506,7 @@ msgid "Shifted Triad"
 msgstr "Tríade Deslocada"
 
 #: ../gui/colors/hcywheel.py:903
-msgid "Weighted more strongly towards the dominant colour."
+msgid "Weighted more strongly towards the dominant color."
 msgstr "Com mais peso em direção à cor dominante."
 
 #: ../gui/colors/hcywheel.py:907
@@ -516,7 +516,7 @@ msgstr "Complementar"
 #: ../gui/colors/hcywheel.py:908
 msgid ""
 "Contrasting opposites, balanced by having central neutrals between them on "
-"the colour wheel."
+"the color wheel."
 msgstr ""
 "Opostos contrastantes, balanceados por neutras centrais entre eles na roda "
 "de cores."
@@ -543,7 +543,7 @@ msgstr "Complementares Divididos"
 
 #: ../gui/colors/hcywheel.py:927
 msgid ""
-"Two analogous colours and a complement to them, with no secondary colours "
+"Two analogous colors and a complement to them, with no secondary colors "
 "between them."
 msgstr ""
 "Duas cores análogas e um complemento para elas, sem cores secundárias "
@@ -656,7 +656,7 @@ msgid "HSV wheel"
 msgstr "Roda HSV"
 
 #: ../gui/colors/hsvwheel.py:95
-msgid "Saturation and Value colour changer."
+msgid "Saturation and Value color changer."
 msgstr "Seletor de cores por Saturação e Valor."
 
 #: ../gui/colors/palette.py:416 ../gui/colors/palette.py:472
@@ -724,7 +724,7 @@ msgid "Color name:"
 msgstr "Nome da cor:"
 
 #: ../gui/colors/paletteview.py:198
-msgid "Current colour's name"
+msgid "Current color's name"
 msgstr "Nome da cor atual"
 
 #: ../gui/colors/paletteview.py:295
@@ -758,7 +758,7 @@ msgid "Component sliders"
 msgstr "Controles deslizantes de componentes"
 
 #: ../gui/colors/sliders.py:92
-msgid "Adjust individual components of the colour."
+msgid "Adjust individual components of the color."
 msgstr "Ajustar componentes individuais da cor."
 
 #: ../gui/colors/sliders.py:138
@@ -1604,7 +1604,7 @@ msgstr "Pressão da Linha"
 msgid "Color History and other tools"
 msgstr "Histórico de Cores e outras ferramentas"
 
-#. Colour changing
+#. Color changing
 #: ../gui/toolbar.py:250
 msgid "Change Color"
 msgstr "Mudar a Cor"
@@ -3225,10 +3225,10 @@ msgstr "Editar Moldura"
 #~ msgid "Change Brush Settings in detail"
 #~ msgstr "Alterar detalhadamente as configurações de pincel"
 
-#~ msgid "Toggle the Colour Triangle"
+#~ msgid "Toggle the Color Triangle"
 #~ msgstr "Liga/desl. o triângulo de cores..."
 
-#~ msgid "Toggle the advanced Colour Sampler"
+#~ msgid "Toggle the advanced Color Sampler"
 #~ msgstr "Liga/desl. o selecionador de cores avançado"
 
 #~ msgid "Toggle the scratchpad"
