--- a/po/sl.po
+++ b/po/sl.po
@@ -494,7 +494,7 @@ msgid "Shifted Triad"
 msgstr ""
 
 #: ../gui/colors/hcywheel.py:903
-msgid "Weighted more strongly towards the dominant colour."
+msgid "Weighted more strongly towards the dominant color."
 msgstr ""
 
 #: ../gui/colors/hcywheel.py:907
@@ -505,7 +505,7 @@ msgstr "Komplementarna barva"
 #: ../gui/colors/hcywheel.py:908
 msgid ""
 "Contrasting opposites, balanced by having central neutrals between them on "
-"the colour wheel."
+"the color wheel."
 msgstr ""
 
 #: ../gui/colors/hcywheel.py:917
@@ -529,7 +529,7 @@ msgstr "Loči komplementarne"
 
 #: ../gui/colors/hcywheel.py:927
 msgid ""
-"Two analogous colours and a complement to them, with no secondary colours "
+"Two analogous colors and a complement to them, with no secondary colors "
 "between them."
 msgstr ""
 
@@ -639,7 +639,7 @@ msgstr ""
 
 #: ../gui/colors/hsvwheel.py:95
 #, fuzzy
-msgid "Saturation and Value colour changer."
+msgid "Saturation and Value color changer."
 msgstr "Spremeni svetlost/obarvanost"
 
 #: ../gui/colors/palette.py:416 ../gui/colors/palette.py:472
@@ -715,7 +715,7 @@ msgstr "Vzorčenje barve ..."
 
 #: ../gui/colors/paletteview.py:198
 #, fuzzy
-msgid "Current colour's name"
+msgid "Current color's name"
 msgstr "Zamenjaj barvo"
 
 #: ../gui/colors/paletteview.py:295
@@ -751,7 +751,7 @@ msgid "Component sliders"
 msgstr ""
 
 #: ../gui/colors/sliders.py:92
-msgid "Adjust individual components of the colour."
+msgid "Adjust individual components of the color."
 msgstr ""
 
 #: ../gui/colors/sliders.py:138
@@ -1619,7 +1619,7 @@ msgstr "Pritisk"
 msgid "Color History and other tools"
 msgstr "Zgodovina barv"
 
-#. Colour changing
+#. Color changing
 #: ../gui/toolbar.py:250
 msgid "Change Color"
 msgstr "Zamenjaj barvo"
@@ -3247,7 +3247,7 @@ msgstr ""
 #~ msgstr "Spremeni svetlost/obarvanost"
 
 #, fuzzy
-#~ msgid "Toggle the Colour Triangle"
+#~ msgid "Toggle the Color Triangle"
 #~ msgstr "Barvni trikotnik ..."
 
 #~ msgid "Open Last"
