--- a/po/sk.po
+++ b/po/sk.po
@@ -1,6 +1,6 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
+# Slovak language translation
+# Copyright (C) 2015 Dušan Kazik
+# This file is distributed under the same license as the mypaint package
 # Dušan Kazik <prescott66@gmail.com>, 2015.
 #
 msgid ""
